# w32dotool

./: .gitignore  COPYING  ChangeLog.md  Makefile.am  README.md  autogen.sh  configure.ac
man/: Makefile.am  w32dotool.1
src/: Makefile.am  cmd.c  cmd.h  getmouselocation.c  getmouselocation.h  main.c  search.c  search.h  windowactivate.c  windowactivate.h
tests/: Makefile.am
